codemirror ui stuff

--- a/web/templates/code_rooms/code_room.html.eex
+++ b/web/templates/code_rooms/code_room.html.eex
@@ -23,6 +23,8 @@
 
 </div>
 
+<h1><%= @code_room.name %></h1>
+
 <div class='code_room' style='display:flex;'>
   <div class='code_board'>
     <textarea
