adds current users

--- a/web/templates/code_rooms/code_room.html.eex
+++ b/web/templates/code_rooms/code_room.html.eex
@@ -43,4 +43,10 @@
       >
     </textarea>
   </div>
+  <div class='current-users'>
+    <p>Current Users:</p>
+    <ul id="current-users-list">
+
+    </ul>
+  </div>
 </div>
