adds link to code_room page back to code_room lobby

--- a/web/templates/code_rooms/code_room.html.eex
+++ b/web/templates/code_rooms/code_room.html.eex
@@ -23,6 +23,8 @@
 
 </div>
 
+<a href="/code_rooms"><- Back to Coderoom Lobby</a>
+
 <h1><%= @code_room.name %></h1>
 
 <div class='code_room' style='display:flex;'>
