provides capability to create public code rooms. public code rooms are accessed via /code_rooms/public/:name, where :name is the name of the coderoom, and they will show up on the main lobby page.

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -7,6 +7,10 @@
 
 */
 
+.code-room-card-link {
+  font-size: 30px;
+}
+
 .cm-s-material {
   background-color: #263238;
   color: rgba(233, 237, 237, 1);
