--- a/web/templates/code_rooms/new.html.eex
+++ b/web/templates/code_rooms/new.html.eex
@@ -12,7 +12,7 @@
     Language: <%= select f, :language, ["Ruby"] %>
   </label>
   <label>
-    Private: <%= select f, :private, [true] %>
+    Private: <%= select f, :private, [true, false] %>
   </label>
   <%= submit "Submit" %>
 <% end %>
