--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,6 +1,2 @@
-<div>
-  <form action="/session/create" method="post">
-    <input name="username" id="username" placeholder="username"/>
-  </form>
-  <%= @username %>
+<div id='app'>
 </div>
