--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Helvetica', sans-serif;
+
+  background: #f8f8f8;
+}
+
 .container{
     display: flex;
     justify-content: center;
